# glew-cmake-old

./: .gitignore  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  glew.pc.in  glewConfig.cmake.in
